--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,5 +1,11 @@
 2007-11-28  Mark Rowe  <mrowe@apple.com>
 
+        Windows build fix.
+
+        * WebCore.vcproj/WebCore.vcproj:
+
+2007-11-28  Mark Rowe  <mrowe@apple.com>
+
         Gtk build fix.
 
         * WebCore.pro:
