2007-11-24  Eric Seidel  <eric@webkit.org>
        Reviewed by Sam.

        reformat get_othercase_range

        * pcre/pcre_compile.cpp:
        (get_othercase_range):


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28140 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,5 +1,14 @@
 2007-11-24  Eric Seidel  <eric@webkit.org>
 
+        Reviewed by Sam.
+
+        reformat get_othercase_range
+
+        * pcre/pcre_compile.cpp:
+        (get_othercase_range):
+
+2007-11-24  Eric Seidel  <eric@webkit.org>
+
         Reviewed by Maciej.
 
         Remove register keyword and more cleanup
