2007-11-24  Eric Seidel  <eric@webkit.org>
        Reviewed by Tim Hatcher.

        Pass around CompileData& instead of CompileData*

        * pcre/pcre_compile.cpp:
        (compile_branch):
        (jsRegExpCompile):


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28146 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,5 +1,15 @@
 2007-11-24  Eric Seidel  <eric@webkit.org>
 
+        Reviewed by Tim Hatcher.
+
+        Pass around CompileData& instead of CompileData*
+
+        * pcre/pcre_compile.cpp:
+        (compile_branch):
+        (jsRegExpCompile):
+
+2007-11-24  Eric Seidel  <eric@webkit.org>
+
         Reviewed by Sam.
 
         Clean up compile_branch, move _pcre_ord2utf8, and rename CompileData
