2007-11-24  Eric Seidel  <eric@webkit.org>
        Reviewed by Sam.

        split first_significant_code into two simpler functions

        * pcre/pcre_compile.cpp:
        (firstSignificantOpCode):
        (firstSignificantOpCodeSkippingAssertions):
        (is_anchored):
        (canApplyFirstCharOptimization):
        (find_firstassertedchar):


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28155 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -2,6 +2,19 @@
 
         Reviewed by Sam.
 
+        split first_significant_code into two simpler functions
+
+        * pcre/pcre_compile.cpp:
+        (firstSignificantOpCode):
+        (firstSignificantOpCodeSkippingAssertions):
+        (is_anchored):
+        (canApplyFirstCharOptimization):
+        (find_firstassertedchar):
+
+2007-11-24  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Sam.
+
         clean up is_counted_repeat
 
         * pcre/pcre_compile.cpp:
