2007-11-26  Eric Seidel  <eric@webkit.org>
        Reviewed by Sam.

        Small speedup (0.7%) by simplifying canUseStackBufferForNextFrame() check

        * pcre/pcre_exec.cpp:
        (MatchStack::MatchStack):
        (MatchStack::popCurrentFrame):


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28168 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,13 @@
+2007-11-26  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Sam.
+
+        Small speedup (0.7%) by simplifying canUseStackBufferForNextFrame() check
+
+        * pcre/pcre_exec.cpp:
+        (MatchStack::MatchStack):
+        (MatchStack::popCurrentFrame):
+
 2007-11-25  Eric Seidel  <eric@webkit.org>
 
         Reviewed by Sam.
