--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,12 @@
+2007-11-28  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Sam.
+
+        Comment cleanup
+
+        * pcre/pcre_exec.cpp:
+        (match):
+
 2007-11-26  Eric Seidel  <eric@webkit.org>
 
         Reviewed by Maciej.
